Fixing sign in image overlapping the how it works text

--- a/public/stylesheets/all.css
+++ b/public/stylesheets/all.css
@@ -168,6 +168,7 @@ END OF RESET
 .header-right {
     float: right;
     margin-right: 20px;
+    width:244px;
 }
 
 .header-right div {
